# parametric-eq-vst3

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: windows-vst3.yml
scripts/: build-windows.cmd  build-windows.ps1  normalize_moduleinfo.py
src/dsp/: EqInteractionModel.h  ParametricEqCore.h  RecentSampleFifo.h
src/plugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
tests/: EqDspTests.cpp
